Inclusão da tag h2 no index.html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <a href="./carros.html">Carros</a>
             <a href="./clubeCvc.html">Clube CVC</a>
         </div>
+        <hr>
+        <h2><span style="background-color: blue;"><strong>Economize</strong></span> muito com as melhores ofertas de viagens</h2>
     </section>
     
 </body>
