--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="./clubeCvc.html">Clube CVC</a>
         </div>
         <hr>
-        <h2><span style="background-color: blue;"><strong>Economize</strong></span> muito com as melhores ofertas de viagens</h2>
+        <h2><strong>Economize</strong> muito com as melhores ofertas de viagens</h2>
     </section>
     
 </body>
