retirada da tag strong da tag h2

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="./clubeCvc.html">Clube CVC</a>
         </div>
         <hr>
-        <h2><strong>Economize</strong> muito com as melhores ofertas de viagens</h2>
+        <h2>Economize muito com as melhores ofertas de viagens</h2>
     </section>
     
 </body>
