Criacao das pastas assets e img, e inclusao da logo CVC

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <section id="cabecalhoPrincipal">
         <div>
+            <img src="./assets/img/cvc-logo-CE6BF1E4CC-seeklogo.com.png" alt="Logo CVC">
             <a href="./passagens.html">Passagens</a>
             <a href="./hoteis.html">Hotéis</a>
             <a href="./pacotes.html">Pacótes</a>
