Inclusão das imagens dos carros

--- a/carros.html
+++ b/carros.html
@@ -8,14 +8,17 @@
 <body>
 
     <section>
-        <h1>Carros</h1>
+        <h1>Aluguel de carros com preços imperdíveis</h1>
+        <hr>
         <div>
-            <img src="" alt="Hb20">
-            <img src="" alt="Onix">
-            <img src="" alt="Sandero">
+            <h1>Encontre o carro certo para você</h1>
+            <img src="./assets/img/Hyundai-HB20-Platinum-Plus-02.jpg" alt="Hb20">
+            <img src="./assets/img/Onix-2023.png" alt="Onix">
+            <img src="./assets/img/RENAULT_SANDERO.jpeg" alt="Sandero">
         </div>
-        <a href="./index.html">Voltar</a>
     </section>
+    <br>
+    <a href="./index.html">Voltar</a>
     
 </body>
 </html>
