Ajuste no carros.html

--- a/carros.html
+++ b/carros.html
@@ -9,12 +9,12 @@
 
     <section>
         <h1>Aluguel de carros com preços imperdíveis</h1>
-        <hr>
-        <div>
-            <h1>Encontre o carro certo para você</h1>
-            <img src="./assets/img/Hyundai-HB20-Platinum-Plus-02.jpg" alt="Hb20">
-            <img src="./assets/img/Onix-2023.png" alt="Onix">
-            <img src="./assets/img/RENAULT_SANDERO.jpeg" alt="Sandero">
+        <h2>Encontre o carro certo para você</h2>
+        
+        <div id="cars">
+            <img style="width: 50%;" src="./assets/img/Hyundai-HB20-Platinum-Plus-02.jpg" alt="Hb20">
+            <img style="width: 50%;" src="./assets/img/Onix-2023.png" alt="Onix">
+            <img style="width: 50%;" src="./assets/img/RENAULT_SANDERO.jpeg" alt="Sandero">
         </div>
     </section>
     <br>
