Alteração da tag 'a' que irá retornar para a pagina principal

--- a/clubeCvc.html
+++ b/clubeCvc.html
@@ -14,7 +14,7 @@
             <a href="[]">Acumule pontos</a>
             <a href="[]">Resgate seus pontos</a>
         </div>
-        <a href="./index.html">Voltar</a>
+        <a href="./indexPacotes.html">Voltar a página inicial</a>
     </section>
     
 </body>
