--- a/cruzeiros.html
+++ b/cruzeiros.html
@@ -14,7 +14,7 @@
             <img src="" alt="Acapulco">
             <img src="" alt="Maldivas">
         </div>
-        <a href="./index.html">Voltar</a>
+        <a href="./indexPacotes.html">Voltar a página inicial</a>
     </section>
     
 </body>
