--- a/hoteis.html
+++ b/hoteis.html
@@ -44,7 +44,7 @@
 
         <a href="#hoteis">Voltar ao topo</a>
         <br>
-        <a href="./index.html">Voltar a página inicial</a>
+        <a href="./indexPacotes.html">Voltar a página inicial</a>
     </section>
     
 </body>
