--- a/passagens.html
+++ b/passagens.html
@@ -14,7 +14,7 @@
             <a href="[]">Dicas de viagens</a>
             <a href="[]">Lojas CVC</a>
         </div>
-        <a href="./index.html">Voltar</a>
+        <a href="./indexPacotes.html">Voltar a página inicial</a>
     </section>
     
 </body>
