--- a/carros.html
+++ b/carros.html
@@ -18,7 +18,7 @@
         </div>
     </section>
     <br>
-    <a href="./index.html">Voltar</a>
+    <a href="./indexPacotes.html">Voltar a página inicial</a>
     
 </body>
 </html>
